examples/test/testpolicy15018.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15018
  namespace: namespace249
spec:
  podSelector:
    matchLabels:
      key29: value18
      key24: value13
      key35: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value49
          key37: value25
          key2: value25
      podSelector:
        matchLabels:
          key35: value8
